1464 - fix UI - label

--- a/ConstructionSiteLibrary/Pages/ChoicesPage.razor
+++ b/ConstructionSiteLibrary/Pages/ChoicesPage.razor
@@ -18,7 +18,7 @@
 
     private void ScreenDimensionObserver(ScreenDimension? dimension)
     {
-        if (dimension == ScreenDimension.S)
+        if (dimension == ScreenDimension.S || dimension == ScreenDimension.XS)
         {
             selectedType = typeof(TableChoiceMobile);
         }
