task 1466 - tabella --> cards

--- a/ConstructionSiteLibrary/Components/Companies/TableCompanies.razor
+++ b/ConstructionSiteLibrary/Components/Companies/TableCompanies.razor
@@ -17,7 +17,7 @@ else
 {
     <h2>@Param</h2>
 
-    @* La tabella delle Categorie *@
+    @* La tabella delle Aziende *@
     <div class="marginComponent">
 
         <RadzenFieldset class="shadow rounded" Style="font-weight:400;">
