correzione componenti mobile

--- a/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
@@ -74,7 +74,7 @@ else
 
 
         // creo uno style aggiuntivo da inviare al componente caricato con il popup come options
-        var additionalStyle = $"height:{viewSize.Height};width:{viewSize.Width}px;";
+        var additionalStyle = $"height:{viewSize.Height};width:{viewSize.Width}px;-webkit-overflow-scrolling: touch;";
         var newOptions = new DialogOptions
             {
                 Style = additionalStyle
