--- a/ClientWebApp/App.razor
+++ b/ClientWebApp/App.razor
@@ -2,28 +2,28 @@
 @using System.Reflection
 @using ConstructionSiteLibrary.Pages
 
-@* <CascadingAuthenticationState>
-<Router AppAssembly="@typeof(App).Assembly" AdditionalAssemblies="@ImporterPages.LoadAssemblyPages()">
-    <Found Context="routeData">
-        <AuthorizeView>
-            <Authorized>
-                <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-                <FocusOnNavigate RouteData="@routeData" Selector="h1" />
-            </Authorized>
-            <NotAuthorized>
-                <LoginPage />
-            </NotAuthorized>
-        </AuthorizeView>
-    </Found>
-    <NotFound>
-        <PageTitle>Not found</PageTitle>
-        <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
-        </LayoutView>
-    </NotFound>
-</Router>
-</CascadingAuthenticationState> *@
-<Router AppAssembly="@typeof(App).Assembly" AdditionalAssemblies="@ImporterPages.LoadAssemblyPages()">
+<CascadingAuthenticationState>
+    <Router AppAssembly="@typeof(App).Assembly" AdditionalAssemblies="@ImporterPages.LoadAssemblyPages()">
+        <Found Context="routeData">
+            <AuthorizeView>
+                <Authorized>
+                    <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+                    <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+                </Authorized>
+                <NotAuthorized>
+                    <LoginPage />
+                </NotAuthorized>
+            </AuthorizeView>
+        </Found>
+        <NotFound>
+            <PageTitle>Not found</PageTitle>
+            <LayoutView Layout="@typeof(MainLayout)">
+                <p role="alert">Sorry, there's nothing at this address.</p>
+            </LayoutView>
+        </NotFound>
+    </Router>
+</CascadingAuthenticationState>
+@* <Router AppAssembly="@typeof(App).Assembly" AdditionalAssemblies="@ImporterPages.LoadAssemblyPages()">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
@@ -34,9 +34,9 @@
             <p role="alert">Sorry, there's nothing at this address.</p>
         </LayoutView>
     </NotFound>
-</Router>
+</Router> *@
 
-@code{
+@code {
     protected override Task OnInitializedAsync()
     {
         Console.WriteLine(typeof(App).Assembly);
