--- a/ConstructionSiteLibrary/Components/Templates/Wizard/TemplateDescriptionSelectionStep.razor
+++ b/ConstructionSiteLibrary/Components/Templates/Wizard/TemplateDescriptionSelectionStep.razor
@@ -3,7 +3,7 @@
 @using Shared.Templates
 
 @inject TemplatesRepository TemplatesRepository
-
+@inject DialogService DialogService
 <ScreenComponent @ref="screenComponent" />
 @if (initialLoading)
 {
@@ -14,8 +14,20 @@ else
     <RadzenTemplateForm TItem="TemplateDescriptionModel" Data="@CurrentSelection" Submit="@Forward">
     <div class="card shadow mb-3 divCard">
         <RadzenText>Seleziona una descrizione</RadzenText>
-        <RadzenDropDown @bind-Value=@CurrentSelection Data=@TemplatesDescriptions TextProperty="Description" Style="width: 500px" />
+        <RadzenRow>
+                <RadzenDropDown @bind-Value=@CurrentSelection Data=@TemplatesDescriptions TextProperty="Description" Style="width:70%; max-width: 500px" />
+                <RadzenButton Icon="add" Variant="Variant.Text"/>
+        </RadzenRow>
+
     </div>
+        @if (true)
+        {
+            <div class="mb-3">
+                <RadzenFieldset Text="Descrizione" class="selezioneDomande mt-3">
+
+                </RadzenFieldset>
+            </div>
+        }
     <div class="row">
         <div class="col">
             <RadzenButton Icon="arrow_back" Text="Indietro" Click="@Back" />
@@ -39,7 +51,7 @@ else
 
     [Parameter]
     public EventCallback<TemplateStepArgs> OnForward { get; set; }
-        
+
     [Parameter]
     public EventCallback OnBack { get; set; }
 
@@ -68,7 +80,7 @@ else
         }
         else
         {
-            CurrentSelection = TemplatesDescriptions.First();
+            CurrentSelection = TemplatesDescriptions.FirstOrDefault();
         }
     }
 
@@ -87,5 +99,32 @@ else
     public void Back()
     {
         OnBack.InvokeAsync();
+    }
+
+    private async Task OpenNewForm()
+    {
+        var width = screenComponent.ScreenSize.Width;
+
+        // creo uno style aggiuntivo da inviare al componente caricato con il popup come options
+        var additionalStyle = $"min-height:fit-content;height:fit-content;width:{width}px;max-width:600px";
+        var newOptions = new DialogOptions
+            {
+                Style = additionalStyle
+            };
+        //creo parametri da inviare al componente caricato con il popup
+        var param = new Dictionary<string, object>
+            {
+                //tra i parametri che invio al dialog creo un EventCallback da passare al componente
+                { "OnSaveComplete", EventCallback.Factory.Create<TemplateDescriptionModel>(this, Reload) },
+            };
+        await DialogService.OpenAsync<FormTemplateDescription>("Nuova scelta", parameters: param, options: newOptions);
+    }
+
+
+    private void Reload(TemplateDescriptionModel desc)
+    {
+        TemplatesDescriptions.Add(desc);
+        CurrentSelection = desc;
+        StateHasChanged();
     }
 }
