--- a/ConstructionSiteLibrary/Components/ConstructorSites/TableConstructorSite.razor.css
+++ b/ConstructionSiteLibrary/Components/ConstructorSites/TableConstructorSite.razor.css
@@ -1,6 +1,7 @@
 ﻿
 .searchBar, ::deep .searchBar {
-    width: 80% !important;
+    width: 350px !important;
+    margin-bottom: 0.8rem;
 }
 
 .divSearchBar {
@@ -17,15 +18,14 @@
 }
 
 .buttonNewSite, ::deep .buttonNewSite {
-    width: 120px;
-    height: 40px;
-    border-radius: 1.2rem !important;
-    margin-right: 1rem;
+   
+    color: var(--font-Card-color1) !important;
+    min-width: 220px;
 }
 
 .textNewSite, ::deep .textNewSite {
-    color: white;
-    margin-top: 0.6rem;
+    font-style: italic;
+    text-decoration: underline;
 }
 
 
