creato pager e reso il contructor site responsive

--- a/ConstructionSiteLibrary/Components/ConstructorSites/TableConstructorSite.razor
+++ b/ConstructionSiteLibrary/Components/ConstructorSites/TableConstructorSite.razor
@@ -28,8 +28,7 @@ else
             }
         </div>
         <div class="mt-5">
-            <RadzenPager ShowPagingSummary="true" PagingSummaryFormat="@pagingSummaryFormat" Density="Density.Compact"
-                HorizontalAlign="HorizontalAlign.Right" Count="count" PageSize="@pageSize" PageChanged="@PageChanged" />
+            <AxtPager PagingSummaryFormat="@pagingSummaryFormat" Count="@count" PageSize="@pageSize" OnPageChanged="@PageChanged" />
         </div>
     </div>
 }
