--- a/ConstructionSiteLibrary/Components/Generics/AxtPager.razor
+++ b/ConstructionSiteLibrary/Components/Generics/AxtPager.razor
@@ -1,13 +1,16 @@
-﻿
+﻿@using System.Text;
+@using ConstructionSiteLibrary.Model
 
 <div class="row">
     <div class="col">
-        <p>Pagina 1 di 2</p>
+        <p class="text-16">@PrintSummary()</p>
     </div>
-    <div class="col">
-        <div class="hstack">
-            <RadzenButton Icon="arrow_back" />
-            <RadzenButton Icon="arrow_forward" />
+    <div class="col buttonCol">
+        <div class="hstack buttonStack">
+            <RadzenButton Icon="arrow_back" Variant="Variant" class="arrowButton" Disabled="DisableBack"
+                          Click="@(()=> ChangePage(PageNavigaton.Back))" />
+            <RadzenButton Icon="arrow_forward" Variant="Variant" class="arrowButton" Disabled="DisableForward"
+                          Click="@(()=> ChangePage(PageNavigaton.Forward))" />
         </div>
     </div>
 </div>
@@ -15,4 +18,111 @@
 
 @code {
 
+    [Parameter]
+    public EventCallback<AxtPagerEventArgs> OnPageChanged { get; set; }
+
+    [Parameter]
+    public int Count { get; set; } = 13;
+
+    [Parameter]
+    public int PageSize { get; set; } = 3;
+
+    [Parameter]
+    public string PagingSummaryFormat { get; set; } = "";
+
+    /// <summary>
+    /// numero totale di pagine
+    /// </summary>
+    private int totPages;
+    /// <summary>
+    /// la pagina corrente
+    /// </summary>
+    private int? currentPage;
+    /// <summary>
+    /// Variante per i bottoni freccia
+    /// </summary>
+    private Variant Variant = Variant.Outlined;
+
+    private bool DisableBack;
+    private bool DisableForward;
+
+    protected override void OnParametersSet()
+    {
+        base.OnParametersSet();
+        CalculatePages();
+    }
+
+    private void CalculatePages()
+    {
+        if (Count > 0 && PageSize > 0 && currentPage is null)
+        {
+            totPages = (Count + (PageSize - 1)) / PageSize;
+            currentPage = 0;
+        }
+        CheckCurrentPage();
+    }
+
+    private string PrintSummary()
+    {
+        var summary = "";
+        if (!string.IsNullOrEmpty(PagingSummaryFormat))
+        {
+            var sb = new StringBuilder();
+            summary = sb.AppendFormat(PagingSummaryFormat, currentPage + 1, totPages, Count).ToString();
+        }
+
+        return summary;
+    }
+
+    private void CheckCurrentPage()
+    {
+        if (currentPage == 0)
+        {
+            DisableBack = true;
+            DisableForward = false;
+        }
+        else if (currentPage == totPages - 1)
+        {
+            DisableBack = false;
+            DisableForward = true;
+        }
+        else
+        {
+            DisableBack = false;
+            DisableForward = false;
+        }
+    }
+
+    private void ChangePage(PageNavigaton navigaton)
+    {
+        switch (navigaton)
+        {
+            case PageNavigaton.Back:
+                currentPage = currentPage > 0 ? currentPage-1 : currentPage;
+                break;
+            case PageNavigaton.Forward:
+                currentPage = currentPage < totPages - 1 ? currentPage+1 : currentPage;
+                break;
+            default:
+                break;
+        }
+
+        CheckCurrentPage();
+        AxtPagerEventArgs args = new()
+        {
+            CurrentPage = currentPage!.Value,
+            Top = PageSize,
+            Skip = currentPage!.Value * PageSize
+        };
+
+        OnPageChanged.InvokeAsync(args);
+
+    }
+
+
+    private enum PageNavigaton
+    {
+        Back,
+        Forward
+    }
 }
