--- a/ConstructionSiteLibrary/Components/Generics/SectionTitle.razor
+++ b/ConstructionSiteLibrary/Components/Generics/SectionTitle.razor
@@ -1,17 +1,20 @@
 ﻿
 
 <div class="my-5">
-    <div class="hstack justify-content-between">
-        <h1>@PageTitle</h1>
-        <RadzenFormField AllowFloatingLabel="false" Variant="@GlobalVariables.ComponentVariant" class="searchBar">
-            <Start>
-                <RadzenIcon Icon="search" />
-            </Start>
-            <ChildContent>
-                <RadzenTextBox Placeholder="@SearchPlaceholder" @oninput="@SearchChanged" />
-            </ChildContent>
-        </RadzenFormField>
-
+    <div class="row">
+        <div class="col-12 col-lg-6 d-flex justify-content-center justify-content-lg-start">
+            <h1 class="title">@PageTitle</h1>
+        </div>
+        <div class="col-12 col-lg-6 mt-5 m-lg-0 d-flex justify-content-center justify-content-lg-end">
+            <RadzenFormField AllowFloatingLabel="false" Variant="@GlobalVariables.ComponentVariant" class="searchBar">
+                <Start>
+                    <RadzenIcon Icon="search" />
+                </Start>
+                <ChildContent>
+                    <RadzenTextBox Placeholder="@SearchPlaceholder" @oninput="@SearchChanged" />
+                </ChildContent>
+            </RadzenFormField>
+        </div>
     </div>
     <div class="row text-center mt-4">
         <div class="col-12">
@@ -20,7 +23,6 @@
             </RadzenButton>
         </div>
     </div>
-
 </div>
 
 
@@ -42,7 +44,7 @@
 
     private void SearchChanged(ChangeEventArgs args)
     {
-        if(args is not null && args.Value is not null)
+        if (args is not null && args.Value is not null)
         {
             OnSearchChanged.InvokeAsync(args.Value as string);
         }
