wip on questions

--- a/ConstructionSiteLibrary/Pages/QuestionPage.razor
+++ b/ConstructionSiteLibrary/Pages/QuestionPage.razor
@@ -23,7 +23,7 @@
         // }
         // else
         // {
-        //     selectedType = typeof(TableQuestion);
+             selectedType = typeof(TableQuestion);
         // }
 
         StateHasChanged();
