--- a/ConstructionSiteLibrary/Components/Questions/TableQuestion.razor
+++ b/ConstructionSiteLibrary/Components/Questions/TableQuestion.razor
@@ -2,51 +2,204 @@
 @using ConstructionSiteLibrary.Repositories
 @using Shared;
 @using Shared.Templates
+@using ConstructionSiteLibrary.Utility
+@using ConstructionSiteLibrary.Model;
+@using ConstructionSiteLibrary.Components.Generics;
+@using Shared.Documents;
 
+@inject ConstructorSitesRepository SiteRepository
 @inject DialogService DialogService
 @inject NotificationManager NotificationManager
 @inject QuestionRepository QuestionRepository
 @inject GlobalVariables GlobalVariables
+@inject QuestionRepository QuestionRepository
 
-<ScreenComponent @ref = "screenComponent"/>
+<ScreenComponent @ref="screenComponent" />
 
-@if (initialLoading)
+@if (onLoading)
 {
     <Loading />
 }
 else
 {
+    <div class="mx-2 my-5">
+    <SectionTitle PageTitle="Domande" ButtonText="+ aggiungi domanda" SearchPlaceholder="Cerca domanda"
+        OnButtonClicked="@OpenForm" OnSearchChanged="@SearchChanged" />
+    <div>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>twitter</td>
+    </tr>
+  </tbody>
+</table>
+
+
+       @* @for (int i = 0; i < displayedQuestions.Count; i += 1)
+            {
+                <div class="row mt-4">
+                    <div class="col">
+                        <RadzenFieldset Text="Domande" class="shadow rounded" Style="font-weight:400;">
+
+
+                 < Question="@displayQuestions[i]" /> 
+
+                 </RadzenFieldset>
+
+                    </div>
+                </div>
+            }  *@
+        </div>
+        <div class="mt-5">
+            <AxtPager PagingSummaryFormat="@pagingSummaryFormat" Count="@count" PageSize="@pageSize"
+                OnPageChanged="@PageChanged" />
+        </div>
+    </div>
+}
+
+@*
+{
+<div class="marginComponent">
+<RadzenFieldset Text="Domande" class="shadow rounded" Style="font-weight:400;">
+<RadzenButton Icon="add" Text="Nuovo" ButtonStyle="ButtonStyle.Success" class="ButtonAdd"
+Style="margin-bottom:2rem;margin-top:1rem;" Click="@(()=>OpenNewForm())" />
+<RadzenDataGrid @ref="grid" TItem="TemplateQuestionModel" GridLines="@DataGridGridLines.Both" IsLoading=@isLoading
+Count="@count" PageSize="@pageSize" Data="@questions"
+AllowColumnResize="true" AllowAlternatingRows="true" ColumnWidth="200px" AllowFiltering="true"
+FilterMode="FilterMode.Simple"
+AllowSorting="true" AllowPaging="true" ShowPagingSummary="true" PagingSummaryFormat="@pagingSummaryFormat"
+PagerHorizontalAlign="HorizontalAlign.Left"
+Density="Density.Compact">
+<Columns>
+<RadzenDataGridColumn TItem="QuestionModel" Property="Id" Title="Id" Width="40px" />
+<RadzenDataGridColumn TItem="TemplateQuestionModel" Property="Text" Title="Nome" />
+<RadzenDataGridColumn TItem="TemplateQuestionModel" Property="IdCategory" Title="Categoria" Width="60px" />
+<RadzenDataGridColumn TItem="TemplateQuestionModel" Title="Azioni" Width="60px" Sortable="false">
+<Template Context="data">
+<RadzenButton Icon="edit" ButtonStyle="ButtonStyle.Info" Variant="Variant.Filled" Size="ButtonSize.Large"
+Click="@(()=>OpenUpdateForm(data))"/>
+<RadzenButton Icon="delete" ButtonStyle="ButtonStyle.Danger" Variant="Variant.Filled" Size="ButtonSize.Large"
+Click="@(()=>Disable(data))"/>
+</Template>
+</Columns>
+</RadzenDataGrid>
+</RadzenFieldset>
+</div>
+
+
+} *@
 
 
 
-@*     @* La tabella delle questions 
-    <div class="marginComponent">
+@code {
+    ScreenComponent? screenComponent;
 
-        <RadzenFieldset Text="Domande" class="shadow rounded" Style="font-weight:400;">
-            <RadzenButton Icon="add" Text="Nuovo" ButtonStyle="ButtonStyle.Success" class="ButtonAdd"
-                          Style="margin-bottom:2rem;margin-top:1rem;" Click="@(()=>OpenNewForm())" />
-            <RadzenDataGrid @ref="grid" TItem="TemplateQuestionModel" GridLines="@DataGridGridLines.Both" IsLoading=@isLoading Count="@count" PageSize="@pageSize" Data="@questions"
-                            AllowColumnResize="true" AllowAlternatingRows="true" ColumnWidth="200px" AllowFiltering="true" FilterMode="FilterMode.Simple"
-                            AllowSorting="true" AllowPaging="true" ShowPagingSummary="true" PagingSummaryFormat="@pagingSummaryFormat" PagerHorizontalAlign="HorizontalAlign.Left"
-                            Density="Density.Compact">
+    private List<TemplateQuestionModel> questions = [];
+     private List<TemplateQuestionModel> displayedQuestions = [];
+    private bool onLoading = false;
+    private string search = "";
+    private string pagingSummaryFormat = "Pagina {0} di {1} (Totale {2} cantieri)";
+    private int count = 0;
+    private int pageSize = GlobalVariables.PageSize;
+    private int pageIndex = 0;
 
-                <Columns>
-                    @*<RadzenDataGridColumn TItem="QuestionModel" Property="Id" Title="Id" Width="40px" />
-                    <RadzenDataGridColumn TItem="TemplateQuestionModel" Property="Text" Title="Nome" />
-                    <RadzenDataGridColumn TItem="TemplateQuestionModel" Property="IdCategory" Title="Categoria" Width="60px" />
-                    <RadzenDataGridColumn TItem="TemplateQuestionModel" Title="Azioni" Width="60px" Sortable="false">
-                        <Template Context="data">
-                                Mostro i bottoni solo se ho i permessi di modifica 
-                            <RadzenButton Icon="edit" ButtonStyle="ButtonStyle.Info" Variant="Variant.Filled" Size="ButtonSize.Large"
-                                              Click="@(()=>OpenUpdateForm(data))"/>
-                                <RadzenButton Icon="delete" ButtonStyle="ButtonStyle.Danger" Variant="Variant.Filled" Size="ButtonSize.Large"
-                                              Click="@(()=>Disable(data))" />
-                        </Template>
-                    </RadzenDataGridColumn>
-                </Columns>
-            </RadzenDataGrid>
-        </RadzenFieldset>
-    </div> *@
+   protected override async Task OnInitializedAsync()
+    {
+        onLoading = true;
+        await base.OnInitializedAsync();
+        await LoadData();
+        onLoading = false;
+    }
 
 
+ private async Task LoadData()
+    {
+        questions = await QuestionRepository.GetQuestions();
+        //FilterSites();
+                displayedQuestions = questions;
+
+    }
+
+
+    private void PageChanged(AxtPagerEventArgs args)
+    {
+        pageIndex = args.CurrentPage;
+        //FilterSites();
+    }
+
+    private void SearchChanged(string args)
+    {
+        search = args;
+       // FilterSites();
+    }
+
+   /* private void FilterQuestions()
+    {
+        displayedQuestions = questions;
+        search = search.TrimStart().TrimEnd();
+        if (!string.IsNullOrEmpty(search))
+        {
+            displayedQuestions = sites.Where(x => x.Name.Contains(search, StringComparison.InvariantCultureIgnoreCase)).ToList();
+        }
+        count = displayedQuestions.Count;
+        SelectCurrentPage();
+    }
+*/
+
+    private void SelectCurrentPage()
+    {
+        var skip = pageIndex * pageSize;
+        displayedQuestions = displayedQuestions.Skip(skip).Take(pageSize).ToList();
+    }
+
+    private async Task OpenForm()
+    {
+        var width = screenComponent.GetScreenSize();
+
+        // creo uno style aggiuntivo da inviare al componente caricato con il popup come options
+        var additionalStyle = $"min-height:fit-content;height:fit-content;width:{width}px;max-width:600px";
+        var newOptions = new DialogOptions
+            {
+                Style = additionalStyle
+            };
+        //creo parametri da inviare al componente caricato con il popup
+        var param = new Dictionary<string, object>
+        {
+            //tra i parametri che invio al dialog creo un EventCallback da passare al componente
+            { "OnSaveComplete", EventCallback.Factory.Create(this, Reload) },
+            { "CreationMode", true },
+        };
+        await DialogService.OpenAsync<FormQuestions>("Nuova domanda", parameters: param, options: newOptions);
+    }
+
+    private async Task Reload()
+    {
+        DialogService.Close();
+        await LoadData();
+        StateHasChanged();
+    }
 }
