--- a/ConstructionSiteLibrary/Components/Questions/TableQuestion.razor.css
+++ b/ConstructionSiteLibrary/Components/Questions/TableQuestion.razor.css
@@ -21,4 +21,18 @@ tbody, td, tfoot, th, thead, tr {
 /*    border-color: inherit;
     border-style: solid;*/
     border-width: 0;
+    color: var(--rz-primary);
 }
+
+thead > tr > th{
+    font-size: 12px;
+}
+
+    tbody > tr > td {
+        font-size: 20px;
+        padding: 24px 48px !important;
+    }
+
+    tbody > tr {
+        height: 48px;
+    }
