--- a/ConstructionSiteLibrary/Layout/NavMenu.razor
+++ b/ConstructionSiteLibrary/Layout/NavMenu.razor
@@ -6,13 +6,36 @@
 
 
 @* Top Row *@
-<div class="top-row ps-3 navbar navbar-dark">
+<div class="top-row ps-3 navbar  navbar-dark">
     <div class="container-fluid">
-        <span class="oi oi-monitor" style="color:white;" aria-hidden="true"></span>
-        @if (!@IconMenuActive)
-        {
-            <p class="navbar-brand">Construction Site Report</p>
-        }
+        @* <span class="oi oi-monitor" style="color:white;" aria-hidden="true"></span> *@
+        <div class="user-profile">
+            @if (IconMenuActive)
+            {
+                <span class="bi bi-person-circle icon-user" aria-hidden="true"></span>
+            }
+            else
+            {
+                <div class="row">
+                    <div class="col-4">
+                        <img class="profile-img" src="default.png" />
+                    </div>
+                    <div class="col-8 profile-container">
+                        <p class="profile-role">Web Developer</p>
+                        <h3 class="profileName">Michele Michelotti</h3>
+                        <RadzenButton Variant="Variant.Text" ButtonStyle="ButtonStyle.Danger" class="buttonLogout">
+                            <i><u>Logout</u></i>
+                        </RadzenButton>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+
+                    </div>
+                </div>
+            }
+        </div>
+
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu" style="margin-bottom:1rem;">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,7 +47,7 @@
         @* Cantieri *@
         <div class="nav-item margin-top-35 @cssNavbarClosed">
             <NavLink class="@cssLinkMenu" href="@PageRouting.HomePage" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door s" aria-hidden="true"></span>
+                <span class="bi bi-house-door" aria-hidden="true"></span>
                 @if (!@IconMenuActive)
                 {
                     <label>I miei cantieri</label>
@@ -34,13 +57,21 @@
         @* Sezione Elementi Report *@
         <div>
             <div class="separator mb-3" @onclick="@ToggleAccordionElementi">
-                <p class="text-16">ELEMENTI REPORT</p>
+                @if (IconMenuActive)
+                {
+                    <p class="text-16">ELEM..</p>
+
+                }
+                else
+                {
+                    <p class="text-16">ELEMENTI REPORT</p>
+                }
             </div>
             @if (elementiAccordion)
             {
                 <div class="nav-item margin-top-12 @cssNavbarClosed">
                     <NavLink class="@cssLinkMenu" href="@PageRouting.TemplatePage">
-                        <span class="bi bi-plus-square" aria-hidden="true"></span>
+                        <span class="bi bi-file-text" aria-hidden="true"></span>
                         @if (!@IconMenuActive)
                         {
                             <label>Template</label>
@@ -79,13 +110,20 @@
         @* Sezione Anagrafiche *@
         <div>
             <div class="separator mb-3" @onclick="ToggleAccordionAnagrafiche">
-                <p class="text-16">ANAGRAFICHE</p>
+                @if (IconMenuActive)
+                {
+                    <p class="text-16">ANAG..</p>
+                }
+                else
+                {
+                    <p class="text-16">ANAGRAFICHE</p>
+                }
             </div>
             @if (AnagraficheAccordion)
             {
                 <div class="nav-item margin-top-12 @cssNavbarClosed">
                     <NavLink class="@cssLinkMenu" href="@PageRouting.CompaniesPage">
-                        <span class="bi bi-shop" aria-hidden="true"></span>
+                        <span class="bi bi-building" aria-hidden="true"></span>
                         @if (!@IconMenuActive)
                         {
                             <label>Ditte cantiere</label>
@@ -103,16 +141,16 @@
                 </div>
             }
         </div>
-        
 
-@*          <div class="nav-item px-3">
-            <NavLink class="nav-link text-20 lh-07" @onclick=@Logout>
-                <span class="bi bi-shop @biClassRules" aria-hidden="true"></span>
-                @if (!@IconMenuActive)
-                {
-                    <label>Logout</label>
-                }
-            </NavLink>
+
+        @*          <div class="nav-item px-3">
+        <NavLink class="nav-link text-20 lh-07" @onclick=@Logout>
+        <span class="bi bi-shop @biClassRules" aria-hidden="true"></span>
+        @if (!@IconMenuActive)
+        {
+        <label>Logout</label>
+        }
+        </NavLink>
         </div> *@
     </nav>
     <div class="bottom-row">
@@ -142,8 +180,8 @@
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
-    private bool elementiAccordion;
-    private bool AnagraficheAccordion;
+    private bool elementiAccordion = true;
+    private bool AnagraficheAccordion = true;
 
     protected override async Task OnParametersSetAsync()
     {
