--- a/ConstructionSiteLibrary/Layout/NavMenu.razor.css
+++ b/ConstructionSiteLibrary/Layout/NavMenu.razor.css
@@ -4,8 +4,44 @@
 
 .top-row {
     height: var(--sidebar-top-hight);
-    padding: 0px 36px;
+    /*padding: 0px 36px;*/
     border-bottom: 1px solid var(--sidebar-separator-color);
+}
+
+.user-profile{
+    text-align:center;
+}
+
+.icon-user {
+    color: white;
+    font-size: 26px;
+}
+
+.profile-img {
+    display: block;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+.profileName {
+    padding-top:4px;
+    margin-bottom: 0px !important;
+    color:white !important;
+    font-size: 18px !important;
+    font-weight:100 !important;
+}
+
+.profile-role {
+    color: white !important;
+    font-size: 14px !important;
+    font-weight: 600 !important;
+    margin: 0px !important;
+}
+.profile-container{
+    text-align:left;
+    padding-left: 25px;
 }
 
 .bottom-row {
@@ -16,6 +52,19 @@
     width: 100%;
     padding-right: 28px;
 }
+
+.buttonLogout, ::deep .buttonLogout {
+    color:white !important;
+    margin-top:5px;
+    font-size: 12px;
+    text-transform: none;
+/*    min-height: 2rem;*/
+
+}
+
+    .buttonLogout:hover, ::deep .buttonLogout:hover {
+        color: red !important;
+    }
 
 /* GESTIONE NAV ITEM */
 
