--- a/ConstructionSiteLibrary/Components/Questions/TableQuestion.razor
+++ b/ConstructionSiteLibrary/Components/Questions/TableQuestion.razor
@@ -27,52 +27,19 @@ else
         OnButtonClicked="@OpenForm" OnSearchChanged="@SearchChanged" />
     <div>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-                        <th scope="col border-right">#</th>
-                        <th scope="col border-right">First</th>
-                        <th scope="col border-right">Last</th>
-      <th scope="col">Handle</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>twitter</td>
-    </tr>
-  </tbody>
-</table>
-
-
-       @* @for (int i = 0; i < displayedQuestions.Count; i += 1)
-            {
-                <div class="row mt-4">
-                    <div class="col">
-                        <RadzenFieldset Text="Domande" class="shadow rounded" Style="font-weight:400;">
-
-
-                 < Question="@displayQuestions[i]" /> 
-
-                 </RadzenFieldset>
-
-                    </div>
-                </div>
-            }  *@
+        <table class="table table-striped">
+            <tbody>
+                @for (int i = 0; i < displayedQuestions.Count; i += 1)
+                    {
+                        <tr>
+                            <td>@displayedQuestions[i].Text</td>
+                            <td>
+                                <RadzenButton Icon="more_vert" class="buttonOptions"></RadzenButton>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
         </div>
         <div class="mt-5">
             <AxtPager PagingSummaryFormat="@pagingSummaryFormat" Count="@count" PageSize="@pageSize"
@@ -81,45 +48,12 @@ else
     </div>
 }
 
-@*
-{
-<div class="marginComponent">
-<RadzenFieldset Text="Domande" class="shadow rounded" Style="font-weight:400;">
-<RadzenButton Icon="add" Text="Nuovo" ButtonStyle="ButtonStyle.Success" class="ButtonAdd"
-Style="margin-bottom:2rem;margin-top:1rem;" Click="@(()=>OpenNewForm())" />
-<RadzenDataGrid @ref="grid" TItem="TemplateQuestionModel" GridLines="@DataGridGridLines.Both" IsLoading=@isLoading
-Count="@count" PageSize="@pageSize" Data="@questions"
-AllowColumnResize="true" AllowAlternatingRows="true" ColumnWidth="200px" AllowFiltering="true"
-FilterMode="FilterMode.Simple"
-AllowSorting="true" AllowPaging="true" ShowPagingSummary="true" PagingSummaryFormat="@pagingSummaryFormat"
-PagerHorizontalAlign="HorizontalAlign.Left"
-Density="Density.Compact">
-<Columns>
-<RadzenDataGridColumn TItem="QuestionModel" Property="Id" Title="Id" Width="40px" />
-<RadzenDataGridColumn TItem="TemplateQuestionModel" Property="Text" Title="Nome" />
-<RadzenDataGridColumn TItem="TemplateQuestionModel" Property="IdCategory" Title="Categoria" Width="60px" />
-<RadzenDataGridColumn TItem="TemplateQuestionModel" Title="Azioni" Width="60px" Sortable="false">
-<Template Context="data">
-<RadzenButton Icon="edit" ButtonStyle="ButtonStyle.Info" Variant="Variant.Filled" Size="ButtonSize.Large"
-Click="@(()=>OpenUpdateForm(data))"/>
-<RadzenButton Icon="delete" ButtonStyle="ButtonStyle.Danger" Variant="Variant.Filled" Size="ButtonSize.Large"
-Click="@(()=>Disable(data))"/>
-</Template>
-</Columns>
-</RadzenDataGrid>
-</RadzenFieldset>
-</div>
-
-
-} *@
-
-
 
 @code {
     ScreenComponent? screenComponent;
 
     private List<TemplateQuestionModel> questions = [];
-     private List<TemplateQuestionModel> displayedQuestions = [];
+    private List<TemplateQuestionModel> displayedQuestions = [];
     private bool onLoading = false;
     private string search = "";
     private string pagingSummaryFormat = "Pagina {0} di {1} (Totale {2} cantieri)";
@@ -127,7 +61,7 @@ Click="@(()=>Disable(data))"/>
     private int pageSize = GlobalVariables.PageSize;
     private int pageIndex = 0;
 
-   protected override async Task OnInitializedAsync()
+    protected override async Task OnInitializedAsync()
     {
         onLoading = true;
         await base.OnInitializedAsync();
@@ -136,11 +70,10 @@ Click="@(()=>Disable(data))"/>
     }
 
 
- private async Task LoadData()
+    private async Task LoadData()
     {
         questions = await QuestionRepository.GetQuestions();
-        //FilterSites();
-                displayedQuestions = questions;
+                //displayedQuestions = questions;
 
     }
 
@@ -148,27 +81,28 @@ Click="@(()=>Disable(data))"/>
     private void PageChanged(AxtPagerEventArgs args)
     {
         pageIndex = args.CurrentPage;
-        //FilterSites();
+        FilterQuestions();
     }
 
     private void SearchChanged(string args)
     {
         search = args;
-       // FilterSites();
+        FilterQuestions();
     }
 
-   /* private void FilterQuestions()
+    private void FilterQuestions()
     {
         displayedQuestions = questions;
         search = search.TrimStart().TrimEnd();
         if (!string.IsNullOrEmpty(search))
         {
-            displayedQuestions = sites.Where(x => x.Name.Contains(search, StringComparison.InvariantCultureIgnoreCase)).ToList();
+            displayedQuestions = questions.Where(x => x.Text.Contains(search,
+            StringComparison.InvariantCultureIgnoreCase)).ToList();
         }
         count = displayedQuestions.Count;
         SelectCurrentPage();
     }
-*/
+
 
     private void SelectCurrentPage()
     {
@@ -188,11 +122,11 @@ Click="@(()=>Disable(data))"/>
             };
         //creo parametri da inviare al componente caricato con il popup
         var param = new Dictionary<string, object>
-        {
-            //tra i parametri che invio al dialog creo un EventCallback da passare al componente
-            { "OnSaveComplete", EventCallback.Factory.Create(this, Reload) },
-            { "CreationMode", true },
-        };
+{
+//tra i parametri che invio al dialog creo un EventCallback da passare al componente
+{ "OnSaveComplete", EventCallback.Factory.Create(this, Reload) },
+{ "CreationMode", true },
+};
         await DialogService.OpenAsync<FormQuestions>("Nuova domanda", parameters: param, options: newOptions);
     }
 
