--- a/ConstructionSiteLibrary/Layout/NavMenu.razor
+++ b/ConstructionSiteLibrary/Layout/NavMenu.razor
@@ -21,9 +21,9 @@
                         <img class="profile-img" src="default.png" />
                     </div>
                     <div class="col-8 profile-container">
-                        <p class="profile-role">Web Developer</p>
-                        <h3 class="profileName">Michele Michelotti</h3>
-                        <RadzenButton Variant="Variant.Text" ButtonStyle="ButtonStyle.Danger" class="buttonLogout">
+                        <p class="profile-role">@PrintUserRole()</p>
+                        <h3 class="profileName">@PrintUserName()</h3>
+                        <RadzenButton Variant="Variant.Text" ButtonStyle="ButtonStyle.Danger" class="buttonLogout" Click="@Logout" >
                             <i><u>Logout</u></i>
                         </RadzenButton>
                     </div>
@@ -237,5 +237,15 @@
         {
             await AuthProvider.Logout();
         }
+    }
+
+    private string PrintUserName()
+    {
+        return $"{AuthProvider.GetUserInfo().Name} {AuthProvider.GetUserInfo().Surname}";
+    }
+
+    private string PrintUserRole()
+    {
+        return $"{AuthProvider.GetUserInfo().Role.Name}";
     }
 }
