--- a/ConstructionSiteLibrary/Components/Questions/TableQuestion.razor.css
+++ b/ConstructionSiteLibrary/Components/Questions/TableQuestion.razor.css
@@ -1,44 +1,134 @@
 ::deep .buttonDelete {
-    background-color: #ff9f9f !important;
+  background-color: #ff9f9f !important;
 }
 
 ::deep .buttonEdit {
-    background-color: #ffe8a1 !important;
+  background-color: #ffe8a1 !important;
 }
 
-
 ::deep .buttonOptions {
-    background-color: transparent !important;
-    box-shadow: none !important;
-    color: var(--rz-primary) !important;
+  background-color: transparent !important;
+  box-shadow: none !important;
+  color: var(--rz-primary) !important;
 }
 
 .table-striped > tbody > tr:nth-child(odd) > td,
 .table-striped > tbody > tr:nth-child(odd) > th {
-    background-color: var(--axt-table-striped-bg);
+  background-color: var(--axt-table-striped-bg);
 }
 
 .table-striped > tbody > tr > td:not(:last-child),
 .table-striped > tbody > tr > th:not(:last-child) {
-    border-right: 1px solid #AFCAF3;
+  border-right: 1px solid #afcaf3;
 }
 
-tbody, td, tfoot, th, thead, tr {
-/*    border-color: inherit;
+tbody,
+td,
+tfoot,
+th,
+thead,
+tr {
+  /*    border-color: inherit;
     border-style: solid;*/
-    border-width: 0;
-    color: var(--rz-primary);
+  border-width: 0;
+  color: var(--rz-primary);
 }
 
-thead > tr > th{
-    font-size: 12px;
+thead > tr > th {
+  font-size: 12px;
+  padding-left: 48px !important;
+  padding-right: 48px !important;
+  font-weight: normal;
 }
 
-    tbody > tr > td {
-        font-size: 20px;
-        padding: 24px 48px !important;
-    }
+tbody > tr > td {
+  font-size: 20px;
+  padding: 24px 48px !important;
+}
 
-    tbody > tr {
-        height: 48px;
-    }
+tbody > tr {
+  height: 48px;
+}
+
+.dropbtn {
+  background-color: #3498db;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropbtn:hover,
+.dropbtn:focus {
+  background-color: #2980b9;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {
+  background-color: #ddd;
+}
+
+.show {
+  display: block;
+}
+
+.dropbtn {
+  background-color: #3498DB;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #2980B9;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: #ddd;}
+
+.show {display: block;}
