--- a/ConstructionSiteLibrary/Components/Categories/TableCategoriesMobile.razor
+++ b/ConstructionSiteLibrary/Components/Categories/TableCategoriesMobile.razor
@@ -1,4 +1,5 @@
 ﻿@using ConstructionSiteLibrary.Repositories
+@using ConstructionSiteLibrary.Components.Generics
 @using Shared;
 
 @inject CategoriesRepository CategoriesRepository
@@ -11,20 +12,22 @@
 }
 else
 {
-    <h2>@Param</h2>
-
     @* La tabella delle Categorie *@
-    <div class="marginComponent">
+    <div class="marginMobile">
 
-            <RadzenButton Icon="add" Text="Nuovo" ButtonStyle="ButtonStyle.Primary" class="ButtonAdd"
+            @* <RadzenButton Icon="add" Text="Nuovo" ButtonStyle="ButtonStyle.Primary" class="ButtonAdd"
                 Style="margin-bottom:2rem;margin-top:1rem;" Click="@(()=>OpenNewForm())" />
             <RadzenButton Icon="sort" Text="Ordina" ButtonStyle="ButtonStyle.Primary" class="ButtonAdd"
-                Style="margin-bottom:2rem;margin-top:1rem;" Click="@(()=>OpenOrderForm())" />
+                Style="margin-bottom:2rem;margin-top:1rem;" Click="@(()=>OpenOrderForm())" /> *@
 
+        <SectionTitle PageTitle="Categorie" ButtonText="+ aggiungi categoria" SearchPlaceholder="Cerca categoria"
+            OnButtonClicked="@OpenNewForm" OnSearchChanged="@SearchChanged" />
 
             @foreach (var category in categories)
             {
-                <RadzenCard Variant="Variant.Filled" Class="rz-my-2 rz-mx-auto" Style="max-width: 420px">
+                <div class="card round-border cardClass mb-3">
+
+               
                     <RadzenStack Gap="0">
                         <RadzenText TextStyle="TextStyle.Overline" class="rz-display-flex rz-mt-2 rz-my-0">Numero
                         </RadzenText>
@@ -44,7 +47,7 @@ else
                         </RadzenRow>
                     </RadzenStack>
 
-                </RadzenCard>
+                </div>
             }
     </div>
 
