table template mobile init

--- a/ConstructionSiteLibrary/Pages/CategoriesPage.razor
+++ b/ConstructionSiteLibrary/Pages/CategoriesPage.razor
@@ -1,5 +1,5 @@
 ﻿@using ConstructionSiteLibrary.Components.Categories;
-@using ConstructionSiteLibrary.Model
+@using ConstructionSiteLibrary.Model;
 
 @attribute [Route(PageRouting.CategoriesPage)]
 
