aggiunto template mobile

--- a/ConstructionSiteLibrary/Pages/TemplatePage.razor
+++ b/ConstructionSiteLibrary/Pages/TemplatePage.razor
@@ -19,7 +19,7 @@
     {
         if (dimension == ScreenDimension.S || dimension == ScreenDimension.XS)
         {
-            //selectedType = typeof(TableTemplatesMobile);
+            selectedType = typeof(TableTemplatesMobile);
         }
         else
         {
